--- a/index.html
+++ b/index.html
@@ -233,32 +233,32 @@
                 <div class="content">
                     <h2 style="color: blue;"> AMALAN </h2><br>
                     <h3>Mory Kienou</h3>
-                    <p>Chef d'Unité bamanankan à l'AMALAN.</p>
-                    <i style="color: blue;">Email : morykienou@gmail.com</i>
+                    <h4>Chef d'Unité bamanankan à l'AMALAN.</h4>
+                    <h3 style="color: blue;">Email : morykienou@gmail.com</h3>
                 </div><br>
             </div>
             <div class="box">
                 <div class="content">
                     <h2 style="color: blue;">AMALAN</h2><br>
                     <h3>Adama Dembélé</h3>
-                    <p> Chef de Section d'Information et Publication.</p>
-                    <i style="color: blue;">Email :dembele11@gmail.com</i>
+                    <h4> Chef de Section d'Information et Publication.</h4>
+                    <b style="color: blue;">Email :dembele11@gmail.com</>
                 </div>
             </div>
             <div class="box">
                 <div class="content">
                     <h2 style="color: #ff8000;"> Orange Kalanso</h2><br>
                     <h3>Kaou Diallo</h3>
-                    <p>Responsable de Orange Kalanso Mali.</p>
-                    <i style="color: blue;">Email :orangekalanso@gmail.com</i>
+                    <h4>Responsable de Orange Kalanso Mali.</h4>
+                    <b style="color: blue;">Email :orangekalanso@gmail.com</>
                 </div>
             </div>
             <div class="box">
                 <div class="content">
                     <h2 style="color: #ff8000;"> Orange Kalanso</h2><br>
                     <h3>Mme Fatoumata Kaloga</h3>
-                    <p>Formatrice Orange Kalanso Mali </p>
-                    <i style="color: blue;">Email : fatidiof@gmail.com</i>
+                    <h4>Formatrice Orange Kalanso Mali </h4>
+                    <b style="color: blue;">Email : fatidiof@gmail.com</>
                 </div>
             </div>
         </div>
@@ -342,8 +342,8 @@
 
 
 
-    <!-- custom js file link  -->
-    <script src="js/script.js"></script>
+                    <!-- custom js file link  -->
+                    <script src="js/script.js"></script>
 
 </body>
 
