--- a/index.html
+++ b/index.html
@@ -235,14 +235,14 @@
                     <h3>Mory Kienou</h3>
                     <h4>Chef d'Unité bamanankan à l'AMALAN.</h4>
                     <h3 style="color: blue;">Email : morykienou@gmail.com</h3>
-                </div><br>
+                </div>
             </div>
             <div class="box">
                 <div class="content">
-                    <h2 style="color: blue;">AMALAN</h2><br>
+                    <h2 style="color: blue;">AMALAN</h2>
                     <h3>Adama Dembélé</h3>
                     <h4> Chef de Section d'Information et Publication.</h4>
-                    <b style="color: blue;">Email :dembele11@gmail.com</>
+                    <b style="color: blue;">Email :dembele11@gmail.com</b>
                 </div>
             </div>
             <div class="box">
@@ -250,7 +250,7 @@
                     <h2 style="color: #ff8000;"> Orange Kalanso</h2><br>
                     <h3>Kaou Diallo</h3>
                     <h4>Responsable de Orange Kalanso Mali.</h4>
-                    <b style="color: blue;">Email :orangekalanso@gmail.com</>
+                    <b style="color: blue;">Email :orangekalanso@gmail.com</b>
                 </div>
             </div>
             <div class="box">
@@ -258,7 +258,7 @@
                     <h2 style="color: #ff8000;"> Orange Kalanso</h2><br>
                     <h3>Mme Fatoumata Kaloga</h3>
                     <h4>Formatrice Orange Kalanso Mali </h4>
-                    <b style="color: blue;">Email : fatidiof@gmail.com</>
+                    <b style="color: blue;">Email : fatidiof@gmail.com</b>
                 </div>
             </div>
         </div>
@@ -342,8 +342,8 @@
 
 
 
-                    <!-- custom js file link  -->
-                    <script src="js/script.js"></script>
+    <!-- custom js file link  -->
+    <script src="js/script.js"></script>
 
 </body>
 
