--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
                     <h2 style="color: blue;"> AMALAN </h2><br>
                     <h3>Mory Kienou</h3>
                     <h4>Chef d'Unité bamanankan à l'AMALAN.</h4>
-                    <h3 style="color: blue;">Email : morykienou@gmail.com</h3>
+                    <b style="color: blue;">Email : morykienou@gmail.com</b>
                 </div>
             </div>
             <div class="box">
