--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 
 <head>
     <meta charset="UTF-8">
@@ -100,7 +100,7 @@
 
         </div><br><br><br>
         <section id="competence">
-            <div><br><br>
+            <div><br>
                 <h1 class="heading"> <span> Mes </span> Compétences </h1>
 
                 <div class="row-2">
@@ -137,8 +137,6 @@
                     </div>
                 </div>
         </section>
-
-        </div>
 
     </section>
 
@@ -300,13 +298,13 @@
 
         <div class="row">
 
-            <form action="">
+            <form>
 
                 <input type="text" placeholder="nom" class="box">
                 <input type="email" placeholder="email" class="box">
                 <input type="number" placeholder="numéro" class="box">
 
-                <textarea name="" placeholder="message" id="" cols="30" rows="10"></textarea>
+                <textarea name="" placeholder="message" cols="30" rows="10"></textarea>
 
                 <input type="submit" class="btn" value="envoye message">
 
