--- a/index.html
+++ b/index.html
@@ -100,8 +100,8 @@
 
         </div><br><br><br>
         <section id="competence">
-            <div><br>
-                <h1 class="heading"> <span> Mes </span> Compétences </h1>
+            <div>
+                <b class="heading"> <span> Mes </span> Compétences </b>
 
                 <div class="row-2">
 
@@ -136,6 +136,7 @@
                         </div>
                     </div>
                 </div>
+            </div>
         </section>
 
     </section>
@@ -304,7 +305,7 @@
                 <input type="email" placeholder="email" class="box">
                 <input type="number" placeholder="numéro" class="box">
 
-                <textarea name="" placeholder="message" cols="30" rows="10"></textarea>
+                <textarea name="message" placeholder="message" cols="30" rows="10"></textarea>
 
                 <input type="submit" class="btn" value="envoye message">
 
