--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <div class="follow">
             <a href="https://www.facebook.com/balamine.safecoro" class="fab fa-facebook-f"></a>
             <a href="https://twitter.com/balamine9" class="fab fa-twitter"></a>
-            <a href="#" class="fab fa-instagram"></a>
+            <a href="https://github.com/ZanCoulibaly" class="fab fa-github"></a>
             <a href="https://www.linkedin.com/in/zan-coulibaly-5284b4181/" class="fab fa-linkedin"></a>
         </div>
 
