--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
                     <h2 style="color: blue;"> AMALAN </h2><br>
                     <h3>Mory Kienou</h3>
                     <h4>Chef d'Unité bamanankan à l'AMALAN.</h4>
-                    <b style="color: blue;">Email : morykienou@gmail.com</b>
+                    <a href="mailto:morykienou@gmail.com">Email : morykienou@gmail.com</a>
                 </div>
             </div>
             <div class="box">
@@ -241,7 +241,7 @@
                     <h2 style="color: blue;">AMALAN</h2>
                     <h3>Adama Dembélé</h3>
                     <h4> Chef de Section d'Information et Publication.</h4>
-                    <b style="color: blue;">Email :dembele11@gmail.com</b>
+                    <a href="mailto:dembele11@gmail.com">Email :dembele11@gmail.com</a>
                 </div>
             </div>
             <div class="box">
@@ -249,7 +249,7 @@
                     <h2 style="color: #ff8000;"> Orange Kalanso</h2><br>
                     <h3>Kaou Diallo</h3>
                     <h4>Responsable de Orange Kalanso Mali.</h4>
-                    <b style="color: blue;">Email :orangekalanso@gmail.com</b>
+                    <a href="mailto:orangekalanso@gmail.com">Email :orangekalanso@gmail.com</a>
                 </div>
             </div>
             <div class="box">
@@ -257,7 +257,7 @@
                     <h2 style="color: #ff8000;"> Orange Kalanso</h2><br>
                     <h3>Mme Fatoumata Kaloga</h3>
                     <h4>Formatrice Orange Kalanso Mali </h4>
-                    <b style="color: blue;">Email : fatidiof@gmail.com</b>
+                    <a href="fatidiof@gmail.com">Email : fatidiof@gmail.com</a>
                 </div>
             </div>
         </div>
